--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -150,6 +150,7 @@ a {
   border-radius: 8px;
   transition: transform .8s, filter 1s ease-out;
   padding: 20px;
+  padding-left: 40px;
   
 }
 
